tests/sema/fail/v3_fail_i32_nonliteral_assignment.ep
# COMPILE_FAIL: use i32(... ) for an explicit conversion

fun run(): i64 {
    let y = 1
    let x: i32 = y
    ret x
}

fun main(): void {
    exit(run())
}
